--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         "symfony/http-kernel": "^6.4 || ^7.3",
         "symfony/dependency-injection": "^6.4 || ^7.3",
         "symfony/routing": "^6.4 || ^7.3"
+    },
+    "require-dev": {
+        "phpstan/phpstan-symfony": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.89",
+        "symfony/test-pack": "^1.2"
     }
 }
