--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           extensions: json, mbstring
-          coverage: none
+          coverage: xdebug
 
       - name: Get Composer cache directory
         id: composer-cache
@@ -40,4 +40,18 @@ jobs:
         run: composer install --no-interaction --prefer-dist --no-progress
 
       - name: Run tests
+        if: matrix.php-version != '8.3'
         run: vendor/bin/phpunit
+
+      - name: Run tests with coverage
+        if: matrix.php-version == '8.3'
+        run: vendor/bin/phpunit --coverage-clover=coverage.xml
+
+      - name: Upload coverage to Codecov
+        if: matrix.php-version == '8.3'
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          flags: phpunit
+          fail_ci_if_error: true
