--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,8 @@
         "api-platform/core": "^4.0",
         "phpstan/phpstan-symfony": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.89",
-        "symfony/test-pack": "^1.2"
+        "symfony/test-pack": "^1.2",
+        "symfony/panther": "^2.3",
+        "symfony/mime": "^7.3"
     }
 }
