--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     ],
     "require": {
         "php": "^8.3",
-        "symfony/framework-bundle": "^7.3",
-        "symfony/security-bundle": "^7.3",
-        "symfony/http-kernel": "^7.3",
-        "symfony/dependency-injection": "^7.3",
-        "symfony/routing": "^7.3",
+        "symfony/framework-bundle": "^7.3 || ^8.0",
+        "symfony/security-bundle": "^7.3 || ^8.0",
+        "symfony/http-kernel": "^7.3 || ^8.0",
+        "symfony/dependency-injection": "^7.3 || ^8.0",
+        "symfony/routing": "^7.3 || ^8.0",
         "lexik/jwt-authentication-bundle": "^3.1"
     },
     "require-dev": {
@@ -33,6 +33,6 @@
         "friendsofphp/php-cs-fixer": "^3.89",
         "symfony/test-pack": "^1.2",
         "symfony/panther": "^2.3",
-        "symfony/mime": "^7.3"
+        "symfony/mime": "^7.3 || ^8.0"
     }
 }
